INSTALL(DIRECTORY de COMPONENT doc-de
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY en COMPONENT doc-den
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY es COMPONENT doc-es
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY fr COMPONENT doc-fr
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY it COMPONENT doc-it
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY pt COMPONENT doc-pt
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ru COMPONENT doc-ru
	DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE)
